<resources>
    <string name="app_name">chronicle</string>

    <!-- Strings related to login -->
    <string name="study_id">Study ID</string>
    <string name="participant_id">Participant ID</string>
    <string name="study_id_hint">00010000–0000-0000-8000-000000000c71</string>
    <string name="participant_id_hint">P1001</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_study_id">Enter your Study ID</string>
    <string name="prompt_participant_id">Enter your Participant ID</string>
    <string name="action_start_collection">Enroll Device</string>
    <string name="enrollment_configuration">enrollment</string>
    <string name="already_enrolled">Device already enrolled</string>
    <string name="invalid_participant">Invalid participant id.</string>
    <string name="invalid_study_id_format">Invalid study id format.</string>
    <string name="device_enroll_failure">Failed to enroll device. Please double check that the Organization ID, Study ID and the Participant ID are correct. If the problem persists, please contact your study administrator.</string>
    <string name="device_enroll_success">Your device has been enrolled! Thank you for participating in our study!\n\nYou have successfully installed Chronicle and may now close the application. Chronicle will continue to function as a background process on your device while the application is closed. To stop sending information to the researchers - for instance, at the end of the study - simply uninstall this app. If you have questions or concerns, please contact a member of your research team.</string>
    <string name="invalid_study_id_blank">Invalid study id.</string>
    <string name="invalid_org_id_blank">Invalid organization id.</string>
    <string name="invalid_org_id_format">Invalid organization id format.</string>

    <string name="manual_usage_settings_permission">Your model phone requires manually granting of Usage Settings permissions. Please go to settings and grant this application usage settings.</string>
    <string name="manual_notification_settings_permission">Your model phone requires manually granting of Notification permissions. Please go to settings and grant this application permission to receive notifications.</string>
    <string name="notification_permissions_required">Your study requires notifications to be enabled to complete enrollment.</string>
    <string name="default_notification_channel_id">com.methodic.chronicle</string>
    <string name="participant_id_header">Participant Id:</string>
    <string name="study_id_header">Study Id:</string>
    <string name="last_upload_header">Last Upload:</string>
    <string name="notification_title">Chronicle Survey</string>
    <string name="prompt_org_id">Enter your Organization ID</string>
    <string name="org_id_header">Organization Id:</string>

    <!--  notifications channels -->
    <string name="channel_description">Channel for chronicle survey daily notifications</string>
    <string name="channel_name">Chronicle</string>
    <string name="notification_text">Tap to complete survey</string>
    <string name="usage_settings_permission">This application requires usage settings permission in order to function.</string>
    <string name="notification_permission">The study you have enrolled your device in requires notification permissions in order to participate.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="organization_id_prompt">Do you have an organization Id?</string>
    <string name="open_settings">Open Settings</string>
    <string name="battery_optimization_exemption">To ensure chronicle works more reliably in the background, please open Battery optimization settings, click on chronicle, and select \"Don\'t Optimize\""</string>
    <string name="settings">Settings</string>
    <string name="uploading_data">Uploading data</string>

    <!-- Phone wake up notification   -->
    <string name="on_wake_notification_title">User Identification</string>
    <string name="on_wake_notification_message">Tap to identify device user</string>
    <string name="interactivity_monitoring_notification_title">Device unlock monitoring</string>
    <string name="interactivity_monitoring_notification_message">Touch to stop monitoring device unlock</string>

    <!--    User identification-->
    <string name="select_current_user_prompt">Please select current user:</string>
    <string name="user_target_child">Target child</string>
    <string name="user_other">Other</string>
    <string name="user_unassigned">Not set</string>
    <string name="save_btn">Save</string>
    <string name="notification_id">notificationId</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="identification_header">User Identification </string>
    <string name="battery_optimization_header">Battery Optimization</string>
    <string name="notification_access">Notification access</string>

    <!--    Preference keys -->
    <string name="current_user"> current_user </string>
    <string name="identify_user"> identify_user </string>
<!--    <string name="previous_user"> previous_user</string>-->
<!--    <string name="current_user_timestamp">current_user_timestamp</string>-->
    <string name="disable_battery_optimization_dialog">disable_battery_optimization_dialog</string>
    <string name="enable_notification_access">enable_notification_access</string>

  <!-- User-defined Intent actions   -->
    <string name="action_identify_after_reboot">Identify user after reboot</string>
</resources>
