<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/identification_header">
        <SwitchPreferenceCompat
            app:key="@string/identify_user"
            app:summary="Receive notification to identify user when device is unlocked"
            app:title="Identify device user" />
        <ListPreference
            app:defaultValue="@string/user_unassigned"
            app:entries="@array/device_users_entries"
            app:entryValues="@array/device_user_values"
            app:key="@string/current_user"
            app:title="Device user"
            app:useSimpleSummaryProvider="true" />?
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/battery_optimization_header" >
        <SwitchPreferenceCompat
            app:key="@string/disable_battery_optimization_dialog"
            app:title="Battery optimization dialog"
            app:summary="Display dialog to disable battery optimization"
            app:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
